objects/Recruiter__c.object
<CustomObject>
    <label>Recruiter</label>
    <nameField>
        <label>Recruiter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recruiters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Mobile_2__c</fullName>
        <label>Mobile 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Other_Info__c</fullName>
        <label>Other Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Discription__c</fullName>
        <label>Discription</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Whatsapp_Mobile__c</fullName>
        <label>Whatsapp Mobile</label>
        <type>Phone</type>
    </fields>
</CustomObject>